@@ -15,6 +15,9 @@ extern "C" {
  */
 static const char utf8_replacement_char[] = "\xEF\xBF\xBD";
 
+/* Unicode zero width space U+200B */
+static const char utf8_zero_width_space[] = "\xE2\x80\x8B";
+
 uint_t a_Utf8_end_of_char(const char *str, uint_t i);
 uint_t a_Utf8_decode(const char*, const char* end, int* len);
 int a_Utf8_encode(unsigned int ucs, char *buf);
